Mon Jan 28 07:36:41 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Don't clear the magic number after disconnecting
   (prevents the upscli_strerr from displaying useful information).

Sun Jan 27 22:03:23 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: (rev 0.15) Completely enable some commands for
   protocol 0004.

Sun Jan 27 21:26:38 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Use upscli_disconnect() if the connection can't be
   established or is lost to release the memory that was allocated by
   upscli_connect() (fixes memory leak when connection to the server is lost).
 - clients/upsmon.c: The upscli_disconnect() is now the opposite of
   upscli_connect() and no longer attempts to LOGOUT from the server, so
   we now need to explicitly send this command.

Sun Jan 27 19:54:38 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: (rev 0.14) Fix input.frequency for protocol 0004.

Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * clients/Makefile.am:
   - set libupsclient version to 1.0.0
   - use the shared version of libupsclient for LDADD
 - docs/protocol.txt: mention libupsclient

Sat Jan 26 21:16:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - lib/Makefile.am: only install libupsclient-config if pkg-config support is
   disabled.
 - man/libupsclient-config.1: created (Debian Lintian QA report)

Sat Jan 26 16:40:01 UTC 2008 / Charles Lepple <clepple@gmail.com>

 * driver/powercom.[ch], man/powercom.8: Powercom update v0.11 from Alexey Sidorov:
   - move variables from .h to .c file (thanks Michael Tokarev for bugreport)
   - fix string comparison (thanks Michael Tokarev for bugreport & Charles Lepple for patch)
   - added BNT-other, for BNT 100-120V models (I havn't specs for it)

Sat Jan 26 04:27:58 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: Starting to add support for protocol 0004. Bumped